--- a/index.html
+++ b/index.html
@@ -812,92 +812,92 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Justice: What's The Right Thing To Do? Episode 01 THE MORAL SIDE OF MURDER">36. ... povídal, že "Správným řešením, jediným správným řešením, je maximalizovat užitek." </h1><hr/>
+<h1>36. Kategorické proměnné můžeme také nazvat ... </h1><hr/>
 <input class="display" id="text36" placeholder="answer">
 <br/>
 <button onclick="fn36()" id = "btn36">Klikni</button>
 <button id="cudlik36" style="display:none" onclick="next(36)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Jeremy Bentham'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='kvalitativní'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117807/mod_resource/content/1/Sokol%20-%20Deontologie%20-%20Kant%20-%20kategorick%C3%BD%20imperativ.pdf str. 103">37. Podle ... spolehlivým a univerzálním vodítkem mravního hodnocení a rozhodování může být jedině rozum.  </h1>
+<h1>37. Kategorické proměnné se dále dělí na ... </h1>
 <hr/>
 <input class="display" id="text37" placeholder="answer">
 <br/>
 <button onclick="fn37()" id = "btn37">Klikni</button>
 <button id="cudlik37" style="display:none" onclick="next(37)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Immanuela Kanta'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='nominální a ordinální'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>38. Konstitutivní pravidla sportu ... </h1>
+<h1 title="Zdroj: https://iastat.vse.cz/typy_promennych.html">38. Kvantitativní neboli numerické proměnné se dále dělí na ... </h1>
 <hr/>
 <input class="display" id="text38" placeholder="answer">
 <br/>
 <button onclick="fn38()" id = "btn38">Klikni</button>
 <button id="cudlik38" style="display:none" onclick="next(38)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='udávají prostor sportu'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='intervalové a poměrové'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>39. "Kritika čistého rozumu" německy: </h1>
+<h1 title="Zdroj: https://iastat.vse.cz/typy_promennych.html">39. V české literatuře se můžeme setkat s velice debilním přívlastkem pro kvantitativní neboli numerické proměnné, a to proměnné ... </h1>
 <hr/>
 <input class="display" id="text39" placeholder="answer">
 <br/>
 <button onclick="fn39()" id = "btn39">Klikni</button>
 <button id="cudlik39" style="display:none" onclick="next(39)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der reinen Vernunft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='kardinální'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>40. "Kritika praktického rozumu" německy </h1>
+<h1 title="Zdroj: https://iastat.vse.cz/typy_promennych.html">40. Kvantitativní neboli numerické proměnné můžeme také dělit na ... </h1>
 <hr/>
 <input class="display" id="text40" placeholder="answer">
 <br/>
 <button onclick="fn40()" id = "btn40">Klikni</button>
 <button id="cudlik40" style="display:none" onclick="next(40)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der praktischen Vernunft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='diskrétní a spojité'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>41. "Kritika soudnosti" německy </h1>
+<h1 title="Zdroj: https://iastat.vse.cz/typy_promennych.html">41. Diskrétní proměnné ... </h1>
 <hr/>
 <input class="display" id="text41" placeholder="answer">
 <br/>
 <button onclick="fn41()" id = "btn41">Klikni</button>
 <button id="cudlik41" style="display:none" onclick="next(41)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Kritik der Urteilskraft'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='nabývají pouze celočíselných obměn'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: https://dl3.cuni.cz/pluginfile.php/117809/mod_resource/content/1/Sokol%20-%20Utilitarismus.pdf str. 121">42. Jedna ze slabin utilitarismu (tzn. etiky důsledků) je ta, že ... </h1>
+<h1 title="Zdroj: https://iastat.vse.cz/typy_promennych.html">42. Jako příklad diskrétní proměnné lze uvést ... </h1>
 <hr/>
 <input class="display" id="text42" placeholder="answer">
 <br/>
 <button onclick="fn42()" id = "btn42">Klikni</button>
 <button id="cudlik42" style="display:none" onclick="next(42)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='v momentě rozhodování důsledky nevíme'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='počet válců automobilu'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>43. Jaké jsou druhy vnitřních cílů ve sportu? </h1>
+<h1 title="Zdroj: https://iastat.vse.cz/typy_promennych.html">43. Spojité (metrické) proměnné nabývají ...</h1>
 <hr/>
 <input class="display" id="text43" placeholder="answer">
 <br/>
 <button onclick="fn43()" id = "btn43">Klikni</button>
 <button id="cudlik43" style="display:none" onclick="next(43)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='úkolové a soutěžní'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='libovolných hodnot z určitého intervalu'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>44. Uveď některé vnitřní hodnoty sportu </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables">44. Independent variable ALWAYS ... </h1>
 <hr/>
 <input class="display" id="text44" placeholder="answer">
 <br/>
 <button onclick="fn44()" id = "btn44">Klikni</button>
 <button id="cudlik44" style="display:none" onclick="next(44)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='soutěžní, asketické, morální'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='happens first'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1761,7 +1761,7 @@ document.getElementById('zvuk35').play(); return false;
 
 function fn36()
 {
-if (document.getElementById("text36").value == "Jeremy Bentham") {
+if (document.getElementById("text36").value == "kvalitativní") {
 document.getElementById('cudlik36').style.display = "inline";
 document.getElementById('zvuk36').play(); return false;
 }
@@ -1770,7 +1770,7 @@ document.getElementById('zvuk36').play(); return false;
 
 function fn37()
 {
-if (document.getElementById("text37").value == "Immanuela Kanta") {
+if (document.getElementById("text37").value == "nominální a ordinální") {
 document.getElementById('cudlik37').style.display = "inline";
 document.getElementById('zvuk37').play(); return false;
 }
@@ -1779,7 +1779,7 @@ document.getElementById('zvuk37').play(); return false;
 
 function fn38()
 {
-if (document.getElementById("text38").value == "udávají prostor sportu") {
+if (document.getElementById("text38").value == "intervalové a poměrové") {
 document.getElementById('cudlik38').style.display = "inline";
 document.getElementById('zvuk38').play(); return false;
 }
@@ -1787,7 +1787,7 @@ document.getElementById('zvuk38').play(); return false;
 
 function fn39()
 {
-if (document.getElementById("text39").value == "Kritik der reinen Vernunft") {
+if (document.getElementById("text39").value == "kardinální") {
 document.getElementById('cudlik39').style.display = "inline";
 document.getElementById('zvuk39').play(); return false;
 }
@@ -1795,7 +1795,7 @@ document.getElementById('zvuk39').play(); return false;
 
 function fn40()
 {
-if (document.getElementById("text40").value == "Kritik der praktischen Vernunft") {
+if (document.getElementById("text40").value == "diskrétní a spojité") {
 document.getElementById('cudlik40').style.display = "inline";
 document.getElementById('zvuk40').play(); return false;
 }
@@ -1804,7 +1804,7 @@ document.getElementById('zvuk40').play(); return false;
 
 function fn41()
 {
-if (document.getElementById("text41").value == "Kritik der Urteilskraft") {
+if (document.getElementById("text41").value == "nabývají pouze celočíselných obměn") {
 document.getElementById('cudlik41').style.display = "inline";
 document.getElementById('zvuk41').play(); return false;
 }
@@ -1812,7 +1812,7 @@ document.getElementById('zvuk41').play(); return false;
 
 function fn42()
 {
-if (document.getElementById("text42").value == "v momentě rozhodování důsledky nevíme") {
+if (document.getElementById("text42").value == "počet válců automobilu") {
 document.getElementById('cudlik42').style.display = "inline";
 document.getElementById('zvuk42').play(); return false;
 }
@@ -1820,7 +1820,7 @@ document.getElementById('zvuk42').play(); return false;
 
 function fn43()
 {
-if (document.getElementById("text43").value == "úkolové a soutěžní") {
+if (document.getElementById("text43").value == "libovolných hodnot z určitého intervalu") {
 document.getElementById('cudlik43').style.display = "inline";
 document.getElementById('zvuk43').play(); return false;
 }
@@ -1828,7 +1828,7 @@ document.getElementById('zvuk43').play(); return false;
 
 function fn44()
 {
-if (document.getElementById("text44").value == "soutěžní, asketické, morální") {
+if (document.getElementById("text44").value == "happens first") {
 document.getElementById('cudlik44').style.display = "inline";
 document.getElementById('zvuk44').play(); return false;
 }
