--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1 title="Zdroj: Identify Independent and Dependent Variables">44. Independent variable ALWAYS ... </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">44. Independent variable ALWAYS ... </h1>
 <hr/>
 <input class="display" id="text44" placeholder="answer">
 <br/>
@@ -901,63 +901,63 @@ display: inline-block;
 </div>
 
 <div class="container">
-<h1>45. Uveď některé vnější hodnoty sportu </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">45. Počet prodaných aut a cena aut. Co z toho je nezávislá proměnná? </h1>
 <hr/>
 <input class="display" id="text45" placeholder="answer">
 <br/>
 <button onclick="fn45()" id = "btn45">Klikni</button>
 <button id="cudlik45" style="display:none" onclick="next(45)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='sláva, finance, zdraví'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='cena aut'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1>46. Kdo napsal "Etika Níkomachova" ? </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">46. Počet studentů ve třídě a potřebný počet lavic. Co z toho je nezávislá proměnná? </h1>
 <hr/>
 <input class="display" id="text46" placeholder="answer">
 <br/>
 <button onclick="fn46()" id = "btn46">Klikni</button>
 <button id="cudlik46" style="display:none" onclick="next(46)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='Aristotelés'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='počet studentů'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">47. Etiky zaměřené na výsledek jednání se nazývají? </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">47. Počet aut na parkovišti a denní doba. Co z toho je nezávislá proměnná? </h1>
 <hr/>
 <input class="display" id="text47" placeholder="answer">
 <br/>
 <button onclick="fn47()" id = "btn47">Klikni</button>
 <button id="cudlik47" style="display:none" onclick="next(47)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='teleologické etiky'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='denní doba'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">48. Jaké etiky patří mezi teleologické etiky? </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">48. Cena za umytí auta a počet zákazníků. Co z toho je nezávislá proměnná? </h1>
 <hr/>
 <input class="display" id="text48" placeholder="answer">
 <br/>
 <button onclick="fn48()" id = "btn48">Klikni</button>
 <button id="cudlik48" style="display:none" onclick="next(48)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='utilitarismus a etika ctností'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='cena za umytí auta'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">49. "statečnost" - doplň případné ctnosti a extrémy </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">49. Cena benzinu a počet prodaných litrů benzinu. Co z toho je nezávislá proměnná? </h1>
 <hr/>
 <input class="display" id="text49" placeholder="answer">
 <br/>
 <button onclick="fn49()" id = "btn49">Klikni</button>
 <button id="cudlik49" style="display:none" onclick="next(49)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='nebojácnost, zbabělost'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='cena benzinu'">Tajenka</p>
 </div>
 
 <div class="container">
-<h1 title="Zdroj: prezentace">50. "lakomství" - doplň případné ctnosti a extrémy  </h1>
+<h1 title="Zdroj: Identify Independent and Dependent Variables https://www.youtube.com/watch?v=dsrJBWxwUyY">50. Cena popcornu a množství prodaného popcornu. Co z toho je nezávislá proměnná?</h1>
 <hr/>
 <input class="display" id="text50" placeholder="answer">
 <br/>
 <button onclick="fn50()" id = "btn50">Klikni</button>
 <button id="cudlik50" style="display:none" onclick="next(50)">Další</button>
-<p class="tajenka" onclick="this.innerHTML='štědrost, marnotratnost'">Tajenka</p>
+<p class="tajenka" onclick="this.innerHTML='cena popcornu'">Tajenka</p>
 </div>
 
 <div class="container">
@@ -1836,7 +1836,7 @@ document.getElementById('zvuk44').play(); return false;
 
 function fn45()
 {
-if (document.getElementById("text45").value == "sláva, finance, zdraví") {
+if (document.getElementById("text45").value == "cena aut") {
 document.getElementById('cudlik45').style.display = "inline";
 document.getElementById('zvuk45').play(); return false;
 }
@@ -1845,7 +1845,7 @@ document.getElementById('zvuk45').play(); return false;
 
 function fn46()
 {
-if (document.getElementById("text46").value == "Aristotelés") {
+if (document.getElementById("text46").value == "počet studentů") {
 document.getElementById('cudlik46').style.display = "inline";
 document.getElementById('zvuk46').play(); return false;
 }
@@ -1854,7 +1854,7 @@ document.getElementById('zvuk46').play(); return false;
 
 function fn47()
 {
-if (document.getElementById("text47").value == "teleologické etiky") {
+if (document.getElementById("text47").value == "denní doba") {
 document.getElementById('cudlik47').style.display = "inline";
 document.getElementById('zvuk47').play(); return false;
 }
@@ -1863,7 +1863,7 @@ document.getElementById('zvuk47').play(); return false;
 
 function fn48()
 {
-if (document.getElementById("text48").value == "utilitarismus a etika ctností") {
+if (document.getElementById("text48").value == "cena za umytí auta") {
 document.getElementById('cudlik48').style.display = "inline";
 document.getElementById('zvuk48').play(); return false;
 }
@@ -1871,7 +1871,7 @@ document.getElementById('zvuk48').play(); return false;
 
 function fn49()
 {
-if (document.getElementById("text49").value == "nebojácnost, zbabělost") {
+if (document.getElementById("text49").value == "cena benzinu") {
 document.getElementById('cudlik49').style.display = "inline";
 document.getElementById('zvuk49').play(); return false;
 }
@@ -1879,7 +1879,7 @@ document.getElementById('zvuk49').play(); return false;
 
 function fn50()
 {
-if (document.getElementById("text50").value == "štědrost, marnotratnost") {
+if (document.getElementById("text50").value == "cena popcornu") {
 document.getElementById('cudlik50').style.display = "inline";
 document.getElementById('zvuk50').play(); return false;
 }
